--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,7 +1,7 @@
 // Mixins in here
 
 #sign-me-up() {
-    .signing-btn {
+    .signing-btn  {
         width: 82%;
         height: 40px;
         background: @eastern-blue;
@@ -12,20 +12,9 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
-    }
 
-    // @media only screen and (@mobile) {
-    //     .signing-btn {
-    //         width: 100%;
-    //         height: 40px;
-    //         background: @eastern-blue;
-    //         color: white;
-    //         font-size: 1.4rem;
-    //         border-radius: 10px;
-    //         display: flex;
-    //         justify-content: center;
-    //         align-items: center;
-    //         cursor: pointer;
-    //     }
-    // }
+        @media (@mobile) {
+            width: 100%;
+        }
+    }
 }
